test/compile_fail/reset_removed.zig
const shift = @import("shift");

comptime {
    _ = shift.reset;
}
